--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.19.2",
         "clsx": "^1.1.1",
         "dotenv": "^8.2.0",
+        "firebase": "^8.0.1",
         "joi": "^14.3.1",
         "jwt-decode": "^2.2.0",
         "material-ui": "^0.20.2",
